# wifi-drone

./: .gitignore  .travis.yml  Cargo.toml  LICENCE-MIT  README.md  build.rs
.travis/: install_linux.sh  install_osx.sh
src/: command.rs  constants.rs  gamepad.rs  heartbeat.rs  keyboard.rs  lib.rs  video.rs  window_manager.rs
src/controls/: command.rs  keyboard.rs  mod.rs
src/network/: gamepad.rs  heartbeat.rs  mod.rs  video.rs
src/video/: decoder.rs  mod.rs  renderer.rs
