[package]
name = "wifi_drone"
version = "0.0.3"
license = "MIT/Apache-2.0"
homepage = "https://github.com/r-wettstaedt/wifi-drone"
repository = "https://github.com/r-wettstaedt/wifi-drone"
authors = ["Robert Wettstädt <robert.wett@gmail.com>"]
keywords = ["drone", "wifi", "quadcopter", "robotics", "fpv"]
description = "Connect to a wifi-controlled quadcopter to receive fpv and control it with your computer"
build = "build.rs"

[dependencies]
log = "^0.3"
env_logger = "^0.4"
glutin = "^0.8"
ffmpeg = { git = "https://github.com/meh/rust-ffmpeg" }